# friendolls-desktop

./: AGENTS.md  README.md  package.json  pnpm-lock.yaml  vite.config.js
.github/workflows/: release.yml
src/: app.css  app.html
src-tauri/: .env.example  .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  lib.rs  lifecycle.rs  main.rs  startup.rs  state.rs  system_tray.rs  utilities.rs
src-tauri/src/assets/: auth-cancelled.html  auth-failed.html  auth-success.html
src-tauri/src/commands/: app.rs  app_data.rs  app_state.rs  auth.rs  config.rs  dolls.rs  friends.rs  interaction.rs  mod.rs  petpet.rs  sprite.rs  user_status.rs
src-tauri/src/core/: mod.rs  state.rs  utilities.rs
src-tauri/src/core/models/: app_config.rs
src-tauri/src/core/services/: auth.rs  mod.rs  ws.rs
src-tauri/src/init/: lifecycle.rs  mod.rs  startup.rs  tracing.rs
src-tauri/src/models/: app_config.rs  app_data.rs  app_state.rs  dolls.rs  event_payloads.rs  friends.rs  health.rs  interaction.rs  mod.rs  remote_error.rs  user.rs
src-tauri/src/remotes/: dolls.rs  friends.rs  health.rs  mod.rs  session.rs  user.rs
src-tauri/src/services/: accelerators.rs  active_app.rs  app_events.rs  app_menu.rs  app_state.rs  app_update.rs  auth.rs  client_config_manager.rs  cursor.rs  doll_editor.rs  friend_active_doll_sprite.rs  friend_cursor.rs  health_manager.rs  health_monitor.rs  interaction.rs  mod.rs  neko_positions.rs  overlay.rs  preferences.rs  scene.rs  session.rs  session_windows.rs  sprite.rs  welcome.rs  window_manager.rs  ws.rs
src-tauri/src/services/active_app/: icon_cache.rs  macos.rs  mod.rs  types.rs  windows.rs
src-tauri/src/services/app_data/: display.rs  mod.rs  refresh.rs
src-tauri/src/services/auth/: api.rs  flow.rs  mod.rs  session.rs  storage.rs
src-tauri/src/services/client_config/: mod.rs  store.rs  window.rs
src-tauri/src/services/client_config_manager/: mod.rs  store.rs  window.rs
src-tauri/src/services/friends/: active_doll_sprites.rs  cursor_positions.rs  mod.rs
src-tauri/src/services/modules/: mod.rs  runtime.rs
src-tauri/src/services/petpet/: mod.rs
src-tauri/src/services/presence_modules/: mod.rs  models.rs  runtime.rs
src-tauri/src/services/scene/: interactivity.rs  mod.rs  windows.rs
src-tauri/src/services/sprite_recolor/: mod.rs  neko.gif.txt
src-tauri/src/services/ws/: client.rs  connection.rs  cursor.rs  doll.rs  emitter.rs  friend.rs  handlers.rs  interaction.rs  mod.rs  refresh.rs  types.rs  user_status.rs  utils.rs
src-tauri/src/state/: auth.rs  mod.rs  network.rs  ui.rs
src-tauri/src/types/bindings/: CursorPosition.ts  CursorPositions.ts  FriendRequestResponseDto.ts  FriendshipResponseDto.ts  SendFriendRequestDto.ts  UserProfile.ts
src/assets/icons/: backpack.svelte  blocks.svelte  external-link.svelte  image.svelte  paw-print.svelte  power.svelte  users.svelte
src/channels/: cursor.ts
src/events/: active-doll-sprite.ts  app-data.ts  app-state.ts  cursor.ts  friend-active-doll-sprite.ts  friend-cursor.ts  interaction.ts  listener-utils.ts  neko-positions.ts  pet-message.ts  scene-interactive.ts  user-status.ts
src/lib/: bindings.ts
src/lib/components/: PetSprite.svelte
src/lib/composables/: usePetState.ts
src/lib/constants/: interaction.ts  pet-sprites.ts
src/lib/stores/: interaction-store.ts
src/lib/utils/: accelerators.ts  sprite-utils.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/app-menu/: +page.svelte
src/routes/client-config/: +page.svelte
src/routes/client-config-manager/: +page.svelte
src/routes/doll-editor/: +page.svelte
src/routes/health-manager/: +page.svelte
src/routes/preferences/: +page.svelte
src/routes/scene/: +page.svelte  DesktopPet.svelte
src/routes/splash/: +page.svelte
src/routes/welcome/: +page.svelte
src/types/: images.d.ts
src/types/bindings/: AppData.ts  AppEvents.ts  AppEventsConstants.ts  AppMetadata.ts  CreateDollDto.ts  DisplayData.ts  DollColorSchemeDto.ts  DollConfigurationDto.ts  DollDto.ts  FriendActiveDollChangedPayload.ts  FriendDisconnectedPayload.ts  FriendRequestAcceptedPayload.ts  FriendRequestDeniedPayload.ts  FriendRequestReceivedPayload.ts  (+19 more)
static/: splash.html
(+31 files in other folders)
