[package]
name = "friendolls-desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "friendolls_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "unstable", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-positioner = "2"
reqwest = { version = "0.12.23", features = ["json", "native-tls", "blocking"] }
ts-rs = "11.0.1"
device_query = "4.0.1"
dotenvy = "0.15.7"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
url = "2.5.7"
rand = "0.9.2"
sha2 = "0.10.9"
base64 = "0.22.1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1"
flate2 = "1.0.28"
rust_socketio = "0.6.0"
tracing-appender = "0.2.4"
tauri-plugin-dialog = "2.4.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-positioner = "2"
